[package]
name = "demor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.0.1"
tokio = "1.0.3"
rsocket_rust = "0.7.2"
rsocket_rust_transport_tcp = "0.7.2"
rsocket_rust_messaging = { git = "https://github.com/rsocket/rsocket-rust", branch = "master" }
